--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,35 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <header class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="navbar-inner">
+      <div id="logo" class="navbar-brand">
+          <%= link_to root_path do%>
+            <span class="glyphicon glyphicon-home"></span>
+          <% end -%>
+      </div>
+      <nav class="collapse navbar-collapse navbar-ex1-collapse">
+        <% if user_signed_in? %>
+          <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to current_user.display_name, edit_user_registration_path %></li>
+            <li><%= link_to 'Выйти', destroy_user_session_path, :method => :delete %></li>
+          </ul>
+        <% else %>
+          <ul class="nav navbar-nav pull-right">
+            <li><%= link_to 'Регистрация', new_user_registration_path %></li>
+            <li><%= link_to 'Войти', new_user_session_path %></li>
+          </ul>
+        <% end %>
+      </nav>
+    </div>
+  </header>
 
-<div class="container">
-  <%= yield %>
-</div>
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+
+  <div class="container">
+    <%= yield %>
+  </div>
 
 </body>
 </html>
