--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Редактирование <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
@@ -13,7 +13,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+    <%= f.label :password %> <i>(оставьте пустым, если не хотите менять)</i><br />
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
@@ -23,7 +23,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+    <%= f.label :current_password %> <i>(введите текущий пароль для подтверждения изменений)</i><br />
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
 
@@ -32,8 +32,8 @@
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<h3>Удалить аккаунт</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>Недовольны? <%= button_to "Да, удалите мой аккаунт", registration_path(resource_name), data: { confirm: "Вы уверены?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
