--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,11 +1,26 @@
-<h2>Редактирование <%= resource_name.to_s.humanize %></h2>
+<h2>Редактирование пользователя</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
+    <%= f.label :last_name, "Фамилия" %><br />
+    <%= f.text_field :last_name, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :first_name, "Имя" %><br />
+    <%= f.text_field :first_name %>
+  </div>
+
+  <div class="field">
+    <%= f.label :login, "Логин" %><br />
+    <%= f.text_field :login %>
+  </div>
+
+  <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -13,22 +28,32 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :password %> <i>(оставьте пустым, если не хотите менять)</i><br />
+    <%= f.label :birthdate, "Дата рождения" %><br />
+    <%= f.date_field :birthdate %>
+  </div>
+
+  <div class="field">
+    <%= f.label :phone, "Телефон" %><br />
+    <%= f.text_field :phone %>
+  </div>
+
+  <div class="field">
+    <%= f.label :password, "Новый пароль" %> <i>(оставьте пустым, если не хотите менять)</i><br />
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :password_confirmation, "Подтверждение пароля" %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
   <div class="field">
-    <%= f.label :current_password %> <i>(введите текущий пароль для подтверждения изменений)</i><br />
+    <%= f.label :current_password, "Текущий пароль" %> <i>(введите текущий пароль для подтверждения изменений)</i><br />
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Update" %>
+    <%= f.submit "Сохранить" %>
   </div>
 <% end %>
 
