--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,20 +1,18 @@
 <div class="row">
-  <div class="col-md-10">
-    <div class="left">
-      <h1>Аверьянов Александр Леонидович</h1>
-      <div>
-        <b>Junior Ruby/RoR Developer, программист (Trainee)</b>, от 7500 грн/мес., полная занятость, удаленная работа
-      </div>
-      <div class="shortInfo">
-        <dl>
-          <dt>Город:</dt><dd>Днепропетровск</dd>
-          <dt>Готов к переезду:</dt><dd>Запорожье</dd>
-        </dl>
-      </div>
+  <div class="col-sm-9">
+    <h1>Аверьянов Александр Леонидович</h1>
+    <div>
+      <b>Junior Ruby/RoR Developer, программист (Trainee)</b>, полная занятость, удаленная работа
+    </div>
+    <div class="shortInfo">
+      <dl>
+        <dt>Город:</dt><dd>Днепропетровск</dd>
+        <dt>Готов к переезду:</dt><dd>Запорожье</dd>
+      </dl>
     </div>
   </div>
-  <div class="col-md-2">
-    <div class="right"><img id="cphoto" src="http://i.work.ua/sent_photo/d/8/6/d860db4a6430db86f44a496a171115f6.jpg" alt="" height="200" width="150"></div>
+  <div class="col-sm-3 photobox aligned-center">
+    <img id="cphoto" src="http://i.work.ua/sent_photo/d/8/6/d860db4a6430db86f44a496a171115f6.jpg" alt="" width="100%">
   </div>
 </div>
 
