--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,54 +1,56 @@
-<h2>Регистрация</h2>
+<div class="aligned-center">
+  <h2>Регистрация</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :last_name, "Фамилия" %><br />
-    <%= f.text_field :last_name, autofocus: true %>
-  </div>
+    <div class="form-group">
+      <%= f.label :last_name, "Фамилия" %><br />
+      <%= f.text_field :last_name, class: "form-control", autofocus: true %>
+    </div>
 
-  <div class="field">
-    <%= f.label :first_name, "Имя" %><br />
-    <%= f.text_field :first_name %>
-  </div>
+    <div class="form-group">
+      <%= f.label :first_name, "Имя" %><br />
+      <%= f.text_field :first_name, class: "form-control" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :login, "Логин" %><br />
-    <%= f.text_field :login %>
-  </div>
+    <div class="form-group">
+      <%= f.label :login, "Логин" %><br />
+      <%= f.text_field :login, class: "form-control" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password, "Пароль" %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> символов минимум)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+    <div class="form-group">
+      <%= f.label :password, "Пароль" %>
+      <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> символов минимум)</em>
+      <% end %><br />
+      <%= f.password_field :password, class: "form-control", autocomplete: "off" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Подтверждение пароля" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+    <div class="form-group">
+      <%= f.label :password_confirmation, "Подтверждение пароля" %><br />
+      <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "off" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email %>
-  </div>
+    <div class="form-group">
+      <%= f.label :email %><br />
+      <%= f.email_field :email, class: "form-control" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :birthdate, "Дата рождения" %><br />
-    <%= f.date_field :birthdate %>
-  </div>
+    <div class="form-group">
+      <%= f.label :birthdate, "Дата рождения" %><br />
+      <%= f.date_field :birthdate, class: "form-control" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :phone, "Телефон" %><br />
-    <%= f.text_field :phone %>
-  </div>
+    <div class="form-group">
+      <%= f.label :phone, "Телефон" %><br />
+      <%= f.text_field :phone, class: "form-control" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Регистрация" %>
-  </div>
-<% end %>
+    <div class="form-group">
+      <%= f.submit "Регистрация", class: "btn btn-lg btn-primary" %>
+    </div>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
+</div>
