--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,6 +45,7 @@ hr {
     margin-right: 10px;
     height: 40px;
     width: 40px;
+    border-radius: 5px;
   }
 }
 
@@ -65,6 +66,11 @@ hr {
 .main-container {
   background: rgba(250, 250, 250, .85);
   padding: 1em;
+}
+
+.file_field {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .photobox {
