--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,6 +4,13 @@
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= devise_error_messages! %>
 
+
+    <div class="form-group">
+        <%= f.label :avatar, "Аватар" %><br />
+        <%= image_tag(current_user.avatar.url(:medium), class: "avatar") %>
+        <%= f.file_field :avatar, class: "file_field" %>
+    </div>
+
     <div class="form-group">
       <%= f.label :last_name, "Фамилия" %><br />
       <%= f.text_field :last_name, class: "form-control", autofocus: true %>
@@ -59,7 +66,7 @@
   <% end %>
   <%= link_to "Назад", :back %>
   <hr>
-  <h3>Удалить аккаунт</h3>
+  <h3>Удаление аккаунта</h3>
 
   <p>Недовольны? <%= button_to "Да, удалите мой аккаунт", registration_path(resource_name), class: "btn btn-lg btn-danger", data: { confirm: "Вы уверены?" }, method: :delete %></p>
 
