registration captcha added

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -80,6 +80,11 @@ hr {
   }
 }
 
+.g-recaptcha > div > div {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .aligned-center {
   text-align: center;
 }
