--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -48,6 +48,10 @@
     </div>
 
     <div class="form-group">
+      <%= recaptcha_tags %>
+    </div>
+
+    <div class="form-group">
       <%= f.submit "Регистрация", class: "btn btn-lg btn-primary" %>
     </div>
   <% end %>
