password reset error fixed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,10 +32,10 @@
 
   <div class="main-container">
     <% if notice %>
-      <p class="notice"><%= notice %></p>
+      <p class="notice aligned-center"><%= notice %></p>
     <% end -%>
     <% if alert %>
-      <p class="alert"><%= alert %></p>
+      <p class="alert aligned-center"><%= alert %></p>
     <% end -%>
     <%= yield %>
   </div>
